Fix profile image alignment

--- a/components/blocks/profileBanner/profile-banner.module.scss
+++ b/components/blocks/profileBanner/profile-banner.module.scss
@@ -10,12 +10,19 @@
         text-align: center;
 
         .headshot-wrapper {
+            position: relative;
             border-radius: 100%;
             overflow: hidden;
             width: 7.5rem;
             height: 7.5rem;
             border: 4px solid variables.$accent-color;
             margin-bottom: variables.$vert-md;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
         }
 
         .name {
